# Hipsters_In_Swarm

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  cleanup_results.sh  hipsters_in_network.argos  hipsters_in_network.bzz  install.sh  obstacle_avoidance.argos  obstacle_avoidance.bzz  run_experiment.sh  test.sh
buzz/: CMakeLists.txt  hipsters_in_network.bzz  opinion_propagation.bzz
buzz/lib/: opinion_propagation.bzz  utils.bzz
experiments/: hipsters_in_network.argos  hipsters_in_network_exp.argos
lib/: obstacle_avoidance_controller.bzz
loop_function/: CMakeLists.txt  buzz_utils.cpp  buzz_utils.h  custom_loop_function.cpp  custom_loop_function.h
scripts/: visualization_results.py
